app/assets/stylesheets/partials/_courses.scss
/* Course detail page */

#course-sidebar .label  {
  display: inline-block;
  margin-right: 2px;
}

$course-img-height: 250px;

.course-infobox {
  @include white-box;
  @include box-shadow-light;
  margin-bottom: 30px;

  .wrapper {
    position: relative;
    min-height: $course-img-height + 40px;
    width: 100%;

    .course-image {
      img {
        height: $course-img-height;
        width: auto;
        float: left;
        margin: 20px 20px 20px 0px;
      }
    }

     .content {
       display: block;
       padding: 15px;

       .title {
         @extend .hd2;
         padding-bottom: 10px;

         a {
           color: $text-color;
           &:hover { text-decoration: none; }
         }
       }
     }

    .options {
      position: absolute;
      bottom: 20px;
      right: 20px;

      img {
        height: 40px;
      }
    }
  }

  .subnav {
    border-top: 1px solid $panel-default-border;
    border-bottom: 1px solid $panel-default-border;
    background-color: $gray-lighter;
    width: 100%;
    height: 32px;

    a {
      color: inherit;

      &:hover {
        color: $link-color;
        cursor: auto;
        text-decoration: none;
      }
    }

    .entry {
      float: left;
      border-right: 1px solid $panel-default-border;
      background-color: inherit;
      padding: 5px 15px;
      white-space: nowrap;
    }
  }

  .collapse-subnav {
    background-color: white;
    padding: 10px;
  }

}

.entry-active {
  background-color: white !important;
  border-bottom: 1px solid white;
}

/* Standard content boxes */

.course-details {
  @include white-box;
  @include box-shadow-light;
  margin-bottom: 30px;

  .title {
    display: inline-block;
    top: 0;
    left: 0;
    background-color: $gray;
    padding: 5px 25px;
    @extend .hd6;
    color: white;
  }

  .content {
    padding: 20px;
  }
}

.course-details > .about {
  position: relative;
  max-height: 400px;
  overflow: hidden;
}

.course-details > .about > .show-more {
  @extend .show-button;
  position: absolute;
  bottom: 0px;
  text-align: center;
  font-weight: 400;
  box-shadow: 0 -15px 5px -3px rgba(255,255,255,0.8);
}

.course-details > .about > .show-less {
  @extend .show-button;
  text-align: center;
  font-weight: 400;
}

/* Sidebar */

.sidebar > .element.recommended {
  border-top: 3px solid $mammooc;
}

.sidebar > .element.pledged {
  border-top: 3px solid $brand-warning;
}

.sidebar > .element > .content.details {
  position: relative;
}

.sidebar > .element > .content.details > .override-divider {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 21px;
  background-color: white;
  z-index: 100;
}

.tracks > .panel-group {
  margin-bottom: 10px;
}

.tracks > .panel-group > .panel {
  margin-bottom: 0px;
  border: 0px solid transparent;
  border-radius: 0px;
  -webkit-box-shadow: 0 0 0;
  box-shadow: 0 0 0;
  background-color: #f5f5f5;
}

.tracks > .panel-group > .panel > .panel-heading {
  border-bottom: 0px solid transparent;
  border-top: 0px solid #ddd;
  background-color: inherit;
  padding: 5px 10px;
}

.tracks .glyphicon {
  line-height: 20px;
  font-size: 12px;
  font-weight: 300;
}

.tracks > .panel-group > .panel > .panel-collapse > .panel-body {
  padding: 10px 10px 0px 10px;
  border-top: 0px solid transparent;
  background-color: #ffffff;
 }

/* Course listing */

.filter-options-top {
  width: 100%;
  height: 34px;
  margin-bottom: 15px;

  .search-with-filterrific {
    float: left;
    position: relative;

    .glyphicon {
      position: absolute;
      top: 10px !important;
      right: 10px;
    }

    & > .form-inline .form-control {
      width: 250px;
    }
  }

  .sort-with-filterrific {
    float: right;

    & > .form-control {
      width: 250px;
      float: right;
    }
  }
}

.courses-wrapper {

  .courses {
    @include white-box;
    @include box-shadow-light;
    margin-bottom: 30px;
    width: 200px;
    height: 300px;
    float: left;

    &:hover {
      @include box-shadow-hover;
      cursor: pointer;
      }

    .course-image {
      border-bottom: 1px solid $panel-default-border;

      img {
        object-fit: cover;
        width: 100%;
        height: 130px;
        overflow: hidden;
      }
    }

    a {
      text-decoration: none;
      color: black;
    }

    .course-info {
      position: relative;
      height: 170px;
      width: 100%;
      padding: 10px;
      font-size: 12px;
      font-weight: 300;

      .course-name {
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
        line-height: 20px;
        max-height: 60px;
        -webkit-line-clamp: 3;
        -webkit-box-orient: vertical;
      }

      .course-instructors {
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
        line-height: 18px;
        max-height: 18px;
        -webkit-line-clamp: 1;
        -webkit-box-orient: vertical;
      }

      .provider {
        position: absolute;
        bottom: 10px;
        right: 10px;

        img {
          width: 100px;
          height: auto;
        }
      }
    }
  }
}

// Show 1 item per line for extra small screens,
// mainly phones (portrait)

@media(max-width: $screen-xs) {
  .courses-wrapper > .courses {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 200px;
    float: none;
  }
}

// Show 2 items per line for extra small screens,
// mainly phones (landscape)

@media(min-width: $screen-xs + 1) and (max-width: $screen-xs-max) {
  .courses-wrapper {
    display: block;
    width: 416px;
    margin: auto;
  }

  .courses-wrapper > .courses {
    &:nth-child(2n+1) {
      width: 200px;
      margin-right: 15.5px;
    }

    &:nth-child(2n+0) {
      width: 200px;
      margin-right: auto;
    }
  }
}

// Show 3 items per line for small and medium screens

@media(min-width: $screen-sm-min) and (max-width: $screen-md-max) {
  .courses-wrapper {
    width: 632px;
    display: block;
    margin: auto;
  }

  .courses-wrapper > .courses {
    &:nth-child(3n+1) {
      margin-left: auto;
      margin-right: 15.5px;
    }
    &:nth-child(3n+2) {
      margin-right: 15.5px;
    }
    &:nth-child(3n+0) {
      margin-right: auto;
    }
  }
}

// Show 4 items per line on large screens

@media(min-width: $screen-lg-min) {
  .courses-wrapper > .courses {
    &:nth-child(4n+1) {
      margin-right: 15.5px;
    }
    &:nth-child(4n+2) {
      margin-right: 15.5px;
    }
    &:nth-child(4n+3) {
      margin-right: 15.5px;
    }
    &:nth-child(4n+0) {
      margin-right: auto;
    }
  }
}

.load-more-courses {
  display: block;
  background-color: white;
  border: 1px solid #ddd;
  width: 100%;
  margin: 0px;
  padding: 10px;
  font-size: 14px;
  text-align: center;
  font-weight: 500;
}

